--- a/.github/workflows/docker-build-and-push.yml
+++ b/.github/workflows/docker-build-and-push.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-  # Schedule for automatic builds:
+  # Schedule for automatic builds
   schedule:
     - cron: '0 0 * * *' # Every day at midnight UTC
   workflow_dispatch: # Allow manual triggers
